@@ -111,7 +111,6 @@ import java.math.BigDecimal;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.util.ArrayList;
 import java.util.Currency;
 import java.util.HashMap;
@@ -191,6 +190,10 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
     private boolean liveCallModification = false;
     private boolean recordingCall = true;
     protected boolean isParserFailed = false;
+    protected boolean playWaitUrlPending = false;
+    Tag conferenceVerb;
+    List<URI> conferenceWaitUris;
+    private boolean playMusicForConference = false;
 
     // Call bridging
     private final ActorRef bridgeManager;
@@ -271,7 +274,10 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         transitions.add(new Transition(sendingEmail, finished));
         transitions.add(new Transition(sendingEmail, finishDialing));
         transitions.add(new Transition(caching, finished));
+        transitions.add(new Transition(caching, conferencing));
+        transitions.add(new Transition(caching, finishConferencing));
         transitions.add(new Transition(playing, ready));
+        transitions.add(new Transition(playing, finishConferencing));
         transitions.add(new Transition(playing, finished));
         transitions.add(new Transition(synthesizing, finished));
         transitions.add(new Transition(redirecting, ready));
@@ -352,6 +358,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         transitions.add(new Transition(conferencing, finishConferencing));
         transitions.add(new Transition(conferencing, hangingUp));
         transitions.add(new Transition(conferencing, finished));
+        transitions.add(new Transition(conferencing, checkingCache));
+        transitions.add(new Transition(conferencing, caching));
+        transitions.add(new Transition(conferencing, playing));
         transitions.add(new Transition(finishConferencing, ready));
         transitions.add(new Transition(finishConferencing, faxing));
         transitions.add(new Transition(finishConferencing, sendingEmail));
@@ -409,6 +418,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             logger.error("URISyntaxException while trying to resolve Cache URI: " + e);
         }
         uri = uri + accountId.toString();
+        playMusicForConference = Boolean.parseBoolean(runtime.getString("play-music-for-conference","false"));
         this.cache = cache(path, uri);
         this.downloader = downloader();
         this.monitoring = monitoring;
@@ -554,7 +564,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         } else if (CallStateChanged.class.equals(klass)) {
             final CallStateChanged event = (CallStateChanged) message;
             callState = event.state();
-            logger.info("VoiceInterpreter received CallStateChanged event: "+callState);
+            if(logger.isInfoEnabled()){
+                logger.info("VoiceInterpreter received CallStateChanged event: "+callState);
+            }
             if (CallStateChanged.State.RINGING == event.state()) {
                 if (forking.equals(state)) {
                     outboundCall = sender;
@@ -625,9 +637,13 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                             attribute = verb.attribute("action");
                         }
                         //Busy was sent by one of the branches, remove the branch, execute dial action and continue
-                        logger.info("call state changed. New call state: " + ((CallStateChanged) message).state() + "Sender in the dialBranches: " + dialBranches.contains(sender));
+                        if(logger.isInfoEnabled()){
+                            logger.info("call state changed. New call state: " + ((CallStateChanged) message).state() + "Sender in the dialBranches: " + dialBranches.contains(sender));
+                        }
                         ActorRef branch = dialBranches.remove(dialBranches.indexOf(sender));
-                        logger.info("Will cancel branch: " + branch.toString());
+                        if(logger.isInfoEnabled()) {
+                            logger.info("Will cancel branch: " + branch.toString());
+                        }
                         branch.tell(new Cancel(), self());
                         if (dialBranches.size() > 0) {
                             return;
@@ -689,6 +705,12 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                     conferenceState = event.state();
                     conferenceStateModeratorPresent(message);
                     break;
+                case COMPLETED:
+                    conferenceState = event.state();
+                    // At this point i think we should call finishConferencing,
+                    // who will tell conference center to destroy the conference.
+                    fsm.transition(message, finishConferencing);
+                    break;
                 default:
                     break;
             }
@@ -701,11 +723,36 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             final DownloaderResponse response = (DownloaderResponse) message;
             if (logger.isDebugEnabled()) {
                 logger.debug("Rcml URI : " + response.get().getURI() + "response succeeded " + response.succeeded()
-                        + ", statusCode " + response.get().getStatusCode());
+                    + ", statusCode " + response.get().getStatusCode());
             }
             if (response.succeeded() && HttpStatus.SC_OK == response.get().getStatusCode()) {
+                if (conferencing.equals(state)) {
+                    //This is the downloader response for Conferencing waitUrl
+                    if (parser != null) {
+                        getContext().stop(parser);
+                        parser = null;
+                    }
+                    final String type = response.get().getContentType();
+                    if (type != null) {
+                        if (type.contains("text/xml") || type.contains("application/xml") || type.contains("text/html")) {
+                            parser = parser(response.get().getContentAsString());
+                        } else if (type.contains("audio/wav") || type.contains("audio/wave") || type.contains("audio/x-wav")) {
+                            parser = parser("<Play>" + request.getUri() + "</Play>");
+                        } else if (type.contains("text/plain")) {
+                            parser = parser("<Say>" + response.get().getContentAsString() + "</Say>");
+                        }
+                    } else {
+                        //If the waitUrl is invalid then move to notFound
+                        fsm.transition(message, hangingUp);
+                    }
+                    final GetNextVerb next = GetNextVerb.instance();
+                    parser.tell(next, self());
+                    return;
+                }
                 if (dialBranches == null || dialBranches.size()==0) {
-                    logger.info("Downloader response is success, moving to Ready state");
+                    if(logger.isInfoEnabled()) {
+                        logger.info("Downloader response is success, moving to Ready state");
+                    }
                     fsm.transition(message, ready);
                 } else {
                     return;
@@ -721,6 +768,20 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         } else if (DiskCacheResponse.class.equals(klass)) {
             final DiskCacheResponse response = (DiskCacheResponse) message;
             if (response.succeeded()) {
+                if (playWaitUrlPending && play.equals(verb.name())) {
+                    fsm.transition(message, conferencing);
+                    return;
+                }
+                //Because of RMS issue https://github.com/RestComm/mediaserver/issues/158 we cannot have List<URI> for waitUrl
+//                if (playWaitUrlPending) {
+//                    if (conferenceWaitUris == null)
+//                        conferenceWaitUris = new ArrayList<URI>();
+//                    URI waitUrl = response.get();
+//                    conferenceWaitUris.add(waitUrl);
+//                    final GetNextVerb next = GetNextVerb.instance();
+//                    parser.tell(next, self());
+//                    return;
+//                }
                 if (caching.equals(state) || checkingCache.equals(state)) {
                     if (play.equals(verb.name()) || say.equals(verb.name())) {
                         fsm.transition(message, playing);
@@ -743,12 +804,28 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                 }
             }
         } else if (ParserFailed.class.equals(klass)) {
-          logger.info("ParserFailed received. Will stop the call");
+            if(logger.isInfoEnabled()) {
+                logger.info("ParserFailed received. Will stop the call");
+            }
             isParserFailed = true;
             fsm.transition(message, hangingUp);
         } else if (Tag.class.equals(klass)) {
             // final Tag verb = (Tag) message;
             verb = (Tag) message;
+            if (playWaitUrlPending) {
+                if (!(play.equals(verb.name()) || say.equals(verb.name()))) {
+                    if (logger.isInfoEnabled()) {
+                        logger.info("Tag for waitUrl is neither Play or Say");
+                    }
+                    fsm.transition(message, hangingUp);
+                }
+                if (say.equals(verb.name())) {
+                    fsm.transition(message, checkingCache);
+                } else if (play.equals(verb.name())) {
+                    fsm.transition(message, caching);
+                }
+                return;
+            }
             if (CallStateChanged.State.RINGING == callState) {
                 if (reject.equals(verb.name())) {
                     fsm.transition(message, rejecting);
@@ -786,14 +863,24 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                 invalidVerb(verb);
             }
         } else if (End.class.equals(klass)) {
+            //Because of RMS issue https://github.com/RestComm/mediaserver/issues/158 we cannot have List<URI> for waitUrl
+//            if (playWaitUrlPending && conferenceWaitUris != null && conferenceWaitUris.size() > 0) {
+//                playWaitUrl(conferenceWaitUris, self());
+//                playWaitUrlPending = false;
+//                return;
+//            }
             if (callState.equals(CallStateChanged.State.COMPLETED)) {
                 fsm.transition(message, finished);
             } else {
                 if (!isParserFailed) {
-                    logger.info("End tag received will move to hangup the call");
+                    if(logger.isInfoEnabled()) {
+                        logger.info("End tag received will move to hangup the call");
+                    }
                     fsm.transition(message, hangingUp);
                 } else {
-                    logger.info("End tag received but parser failed earlier so hangup would have been already sent to the call");
+                    if(logger.isInfoEnabled()) {
+                        logger.info("End tag received but parser failed earlier so hangup would have been already sent to the call");
+                    }
                 }
 
             }
@@ -801,7 +888,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             fsm.transition(message, gathering);
         } else if (MediaGroupResponse.class.equals(klass)) {
             final MediaGroupResponse<String> response = (MediaGroupResponse<String>) message;
-            logger.info("MediaGroupResponse, succeeded: " + response.succeeded() + "  " + response.cause());
+            if(logger.isInfoEnabled()) {
+                logger.info("MediaGroupResponse, succeeded: " + response.succeeded() + "  " + response.cause());
+            }
             if (response.succeeded()) {
                 if (playingRejectionPrompt.equals(state)) {
                     fsm.transition(message, hangingUp);
@@ -906,7 +995,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             attribute = verb.attribute("action");
         }
         if (dialBranches != null && dialBranches.contains(sender)) {
-            logger.info("Dial branch new call state: " + ((CallStateChanged) message).state().toString() + " call path: " + sender().path() + " VI state: " + fsm.state());
+            if(logger.isInfoEnabled()) {
+                logger.info("Dial branch new call state: " + ((CallStateChanged) message).state().toString() + " call path: " + sender().path() + " VI state: " + fsm.state());
+            }
             dialBranches.remove(sender);
 //            if (attribute != null) {
 //                executeDialAction(message, sender);
@@ -978,11 +1069,15 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
     }
 
     private void conferenceStateModeratorPresent(final Object message) {
-        logger.info("VoiceInterpreter#conferenceStateModeratorPresent will unmute the call: " + call.path().toString());
+        if(logger.isInfoEnabled()) {
+            logger.info("VoiceInterpreter#conferenceStateModeratorPresent will unmute the call: " + call.path().toString());
+        }
         call.tell(new Unmute(), self());
 
         if (confSubVoiceInterpreter != null) {
+        if(logger.isInfoEnabled()) {
             logger.info("VoiceInterpreter stopping confSubVoiceInterpreter");
+        }
 
             // Stop the conference back ground music
             final StopInterpreter stop = new StopInterpreter();
@@ -1055,7 +1150,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         while (headerNames.hasNext()) {
             String headerName = headerNames.next();
             if (headerName.startsWith("X-")) {
-                logger.debug("%%%%%%%%%%% Indetified customer header: " + headerName);
+                if(logger.isDebugEnabled()) {
+                    logger.debug("%%%%%%%%%%% Indetified customer header: " + headerName);
+                }
                 parameters.add(new BasicNameValuePair(prefix + headerName, sipMessage.getHeader(headerName)));
             }
         }
@@ -1291,9 +1388,10 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             final GetNextVerb next = GetNextVerb.instance();
             if (parser != null) {
                 parser.tell(next, source);
-            } else {
+            } else if(logger.isInfoEnabled()) {
                 logger.info("Parser is null");
             }
+
         }
     }
 
@@ -1663,7 +1761,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             context.setReceiveTimeout(Duration.create(timeLimit, TimeUnit.SECONDS));
 
             if (dialRecordAttribute != null && "true".equalsIgnoreCase(dialRecordAttribute.value())) {
-                logger.info("Start recording of the bridge");
+                if(logger.isInfoEnabled()) {
+                    logger.info("Start recording of the bridge");
+                }
                 record(bridge);
             }
         }
@@ -1695,7 +1795,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
     }
 
     private void recordCall() {
-        logger.info("Start recording of the call");
+        if(logger.isInfoEnabled()) {
+            logger.info("Start recording of the call");
+        }
         record(call);
     }
 
@@ -1707,7 +1809,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
     @SuppressWarnings("unchecked")
     private void executeDialAction(final Object message, final ActorRef outboundCall) {
         if (!dialActionExecuted && verb != null && dial.equals(verb.name())) {
-            logger.info("Proceeding to execute Dial Action attribute");
+            if(logger.isInfoEnabled()){
+                logger.info("Proceeding to execute Dial Action attribute");
+            }
             this.dialActionExecuted = true;
             final List<NameValuePair> parameters = parameters();
 
@@ -1715,7 +1819,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
 
             if (call != null) {
                 try {
-                    logger.info("Trying to get inbound call Info");
+                    if(logger.isInfoEnabled()) {
+                        logger.info("Trying to get inbound call Info");
+                    }
                     final Timeout expires = new Timeout(Duration.create(5, TimeUnit.SECONDS));
                     Future<Object> future = (Future<Object>) ask(call, new GetCallInfo(), expires);
                     CallResponse<CallInfo> callResponse = (CallResponse<CallInfo>) Await.result(future,
@@ -1728,7 +1834,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
 
             if (outboundCall != null) {
                 try {
-                    logger.info("Trying to get outboundCall Info");
+                    if(logger.isInfoEnabled()) {
+                        logger.info("Trying to get outboundCall Info");
+                    }
                     final Timeout expires = new Timeout(Duration.create(10, TimeUnit.SECONDS));
                     Future<Object> future = (Future<Object>) ask(outboundCall, new GetCallInfo(), expires);
                     CallResponse<CallInfo> callResponse = (CallResponse<CallInfo>) Await.result(future,
@@ -1822,7 +1930,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
 
             final NotificationsDao notifications = storage.getNotificationsDao();
             if (attribute != null) {
-                logger.info("Executing Dial Action attribute.");
+                if(logger.isInfoEnabled()) {
+                    logger.info("Executing Dial Action attribute.");
+                }
                 String action = attribute.value();
                 if (action != null && !action.isEmpty()) {
                     URI target = null;
@@ -1854,8 +1964,12 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                             method = "POST";
                         }
                     }
-                    logger.info("Dial Action URL: " + uri.toString() + " Method: " + method);
-                    logger.debug("Dial Action parameters: \n" + parameters);
+                    if(logger.isInfoEnabled()) {
+                        logger.info("Dial Action URL: " + uri.toString() + " Method: " + method);
+                    }
+                    if(logger.isDebugEnabled()) {
+                        logger.debug("Dial Action parameters: \n" + parameters);
+                    }
                     // Redirect to the action url.
                     request = new HttpRequestDescriptor(uri, method, parameters);
                     // Tell the downloader to send the Dial Parameters to the Action url but we don't need a reply back so sender ==
@@ -1865,7 +1979,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                 }
             }
         } else if (verb == null) {
-            logger.info("Dial action didn't executed because verb is null");
+            if(logger.isInfoEnabled()) {
+                logger.info("Dial action didn't executed because verb is null");
+            }
         }
     }
 
@@ -1877,14 +1993,18 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         @Override
         public void execute(final Object message) throws Exception {
             final State state = fsm.state();
-            logger.info("FinishDialing, current state: " + state);
+            if(logger.isInfoEnabled()) {
+                logger.info("FinishDialing, current state: " + state);
+            }
             Attribute attribute = null;
             if (verb != null) {
                 attribute = verb.attribute("action");
             }
 
             if (message instanceof ReceiveTimeout && dialBranches != null) {
-                logger.info("Received timeout, will cancel branches, current VoiceIntepreter state: " + state);
+                if(logger.isInfoEnabled()) {
+                    logger.info("Received timeout, will cancel branches, current VoiceIntepreter state: " + state);
+                }
                 //The forking timeout reached, we have to cancel all dial branches
                 final UntypedActorContext context = getContext();
                 context.setReceiveTimeout(Duration.Undefined());
@@ -1897,7 +2017,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
     //                        executeDialAction(message, branch);
     //                    }
                         branch.tell(new Cancel(), source);
-                        logger.info("Canceled branch: " + branch.path());
+                        if(logger.isInfoEnabled()) {
+                            logger.info("Canceled branch: " + branch.path());
+                        }
                     }
                 }
                 if (dialBranches != null && dialBranches.size() > 0) {
@@ -1905,7 +2027,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                 }
 //                    call.tell(new StopMediaGroup(), null);
                 if (attribute == null) {
-                    logger.info("Will ask for the next verb from parser");
+                    if(logger.isInfoEnabled()) {
+                        logger.info("Will ask for the next verb from parser");
+                }
                     final GetNextVerb next = GetNextVerb.instance();
                     parser.tell(next, source);
                 } else {
@@ -1922,11 +2046,15 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             }
 
             if (message instanceof CallStateChanged) {
-                logger.info("CallStateChanged state: "+((CallStateChanged)message).state().toString()+" ,sender: "+sender().path());
+                if(logger.isInfoEnabled()) {
+                    logger.info("CallStateChanged state: "+((CallStateChanged)message).state().toString()+" ,sender: "+sender().path());
+                }
                 if (forking.equals(state) || finishDialing.equals(state)) {
                     if (sender.equals(call)) {
                         //Initial call wants to finish dialing
-                        logger.info("Sender == call: " + sender.equals(call));
+                        if(logger.isInfoEnabled()) {
+                            logger.info("Sender == call: " + sender.equals(call));
+                        }
                         final UntypedActorContext context = getContext();
                         context.setReceiveTimeout(Duration.Undefined());
 
@@ -1967,7 +2095,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                         return;
                     }
                 } else if (bridged.equals(state)) {
-                    logger.info("finishDialing state=bridged, will hangup outboundCall");
+                    if(logger.isInfoEnabled()) {
+                        logger.info("finishDialing state=bridged, will hangup outboundCall");
+                    }
                     outboundCall.tell(new Hangup(), source);
                 } else {
 //                    logger.debug("FinishDialing, State: " + state);
@@ -1997,16 +2127,20 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             }
 
             if (attribute != null) {
-                logger.info("Executing Dial Action url");
+                if(logger.isInfoEnabled()) {
+                    logger.info("Executing Dial Action url");
+                }
                 if (outboundCall != null) {
                     executeDialAction(message, outboundCall);
                 } else {
-                    logger.info("Executing Dial Action url");
+                    if(logger.isInfoEnabled()) {
+                        logger.info("Executing Dial Action url");
+                    }
                     executeDialAction(message, null);
                 }
                 callback();
                 return;
-            } else {
+            } else if(logger.isInfoEnabled()) {
                 logger.info("Action attribute is null.");
             }
 
@@ -2115,8 +2249,15 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
 
         @Override
         public void execute(final Object message) throws Exception {
+            if (message instanceof DiskCacheResponse) {
+                URI waitUrl = ((DiskCacheResponse)message).get();
+                playWaitUrl(waitUrl, self());
+                playWaitUrlPending = false;
+                return;
+            }
             final NotificationsDao notifications = storage.getNotificationsDao();
             final Tag child = conference(verb);
+            conferenceVerb = verb;
 
             // Mute
             Attribute attribute = child.attribute("muted");
@@ -2141,23 +2282,37 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                 }
             }
 
+            if (logger.isInfoEnabled()) {
+                logger.info("At conferencing state, playMusicForConference: "+playMusicForConference+" conferenceInfo.participants().size(): "+conferenceInfo.participants().size());
+            }
+            if (playMusicForConference && startConferenceOnEnter) {
+                //playMusicForConference is true, take over control of startConferenceOnEnter
+                if (conferenceInfo.participants().size() == 1) {
+                    startConferenceOnEnter = false;
+                } else  if (conferenceInfo.participants().size() > 1) {
+                    startConferenceOnEnter = true;
+                }
+            }
+
             if (!startConferenceOnEnter && conferenceState == ConferenceStateChanged.State.RUNNING_MODERATOR_ABSENT) {
                 if (!muteCall) {
                     final Mute mute = new Mute();
-                    logger.info("Muting the call as startConferenceOnEnter =" + startConferenceOnEnter + " callMuted = "
+                    if(logger.isInfoEnabled()) {
+                        logger.info("Muting the call as startConferenceOnEnter =" + startConferenceOnEnter + " , callMuted = "
                             + muteCall);
+                    }
                     call.tell(mute, source);
                 }
 
                 // Only play background music if conference is not doing that already
                 // If conference state is RUNNING_MODERATOR_ABSENT and participants > 0 then BG music is playing already
-                logger.info("Play background music? " + conferenceInfo.participants().size());
+                if(logger.isInfoEnabled()) {
+                    logger.info("Play background music? " + (conferenceInfo.participants().size() == 1));
+                }
                 boolean playBackground = conferenceInfo.participants().size() == 1;
                 if (playBackground) {
                     // Parse wait url.
-                    URI waitUrl = new URL(
-                            "http://127.0.0.1:8080/restcomm/music/rock/nickleus_-_original_guitar_song_200907251723.wav")
-                            .toURI();
+                    URI waitUrl = new URI("/restcomm/music/electronica/teru_-_110_Downtempo_Electronic_4.wav");
                     attribute = child.attribute("waitUrl");
                     if (attribute != null) {
                         String value = attribute.value();
@@ -2196,9 +2351,20 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                         }
                     }
 
+                    if (!waitUrl.getPath().toLowerCase().endsWith("wav")) {
+                        if (logger.isInfoEnabled()) {
+                            logger.info("WaitUrl for Conference will use RCML from URI: "+waitUrl.toString());
+                        }
+                        final List<NameValuePair> parameters = parameters();
+                        request = new HttpRequestDescriptor(waitUrl, method, parameters);
+                        downloader.tell(request, self());
+                        playWaitUrlPending = true;
+                        return;
+                    }
+
                     // Tell conference to play music to participants on hold
-                    if (waitUrl != null) {
-                        conference.tell(new Play(waitUrl, Short.MAX_VALUE), super.source);
+                    if (waitUrl != null && !playWaitUrlPending) {
+                        playWaitUrl(waitUrl, super.source);
                     }
                 }
             } else if (conferenceState == ConferenceStateChanged.State.RUNNING_MODERATOR_ABSENT) {
@@ -2221,6 +2387,15 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         }
     }
 
+    //Because of RMS issue https://github.com/RestComm/mediaserver/issues/158 we cannot have List<URI> for waitUrl
+    protected void playWaitUrl(final List<URI> waitUrls, final ActorRef source) {
+        conference.tell(new Play(waitUrls, Short.MAX_VALUE), source);
+    }
+
+    protected void playWaitUrl(final URI waitUrl, final ActorRef source) {
+        conference.tell(new Play(waitUrl, Short.MAX_VALUE), source);
+    }
+
     private final class FinishConferencing extends AbstractDialAction {
         public FinishConferencing(final ActorRef source) {
             super(source);
@@ -2236,7 +2411,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             }
 
             // Clean up
-            if (ConferenceStateChanged.class.equals(message)) {
+            if (message instanceof ConferenceStateChanged) {
                 // Destroy conference if state changed to completed (last participant in call)
                 ConferenceStateChanged confStateChanged = (ConferenceStateChanged) message;
                 if (ConferenceStateChanged.State.COMPLETED.equals(confStateChanged.state())) {
@@ -2250,7 +2425,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             final NotificationsDao notifications = storage.getNotificationsDao();
 
             // Parse "action".
-            Attribute attribute = verb.attribute("action");
+            Attribute attribute = conferenceVerb.attribute("action");
             if (attribute != null) {
                 String action = attribute.value();
                 if (action != null && !action.isEmpty()) {
@@ -2270,7 +2445,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                     final URI uri = UriUtils.resolve(base, target);
                     // Parse "method".
                     String method = "POST";
-                    attribute = verb.attribute("method");
+                    attribute = conferenceVerb.attribute("method");
                     if (attribute != null) {
                         method = attribute.value();
                         if (method != null && !method.isEmpty()) {
@@ -2305,7 +2480,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
 
         @Override
         public void execute(final Object message) throws Exception {
-            logger.info("At Finished state, state: " + fsm.state());
+            if(logger.isInfoEnabled()) {
+                logger.info("At Finished state, state: " + fsm.state());
+            }
             final Class<?> klass = message.getClass();
             if (CallStateChanged.class.equals(klass)) {
                 final CallStateChanged event = (CallStateChanged) message;
@@ -2343,7 +2520,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             if (conference != null) {
                 // Parse "endConferenceOnExit"
                 boolean endOnExit = false;
-                final Tag child = conference(verb);
+                final Tag child = conference(conferenceVerb);
                 Attribute attribute = child.attribute("endConferenceOnExit");
 
                 if (attribute != null) {
@@ -2422,17 +2599,23 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
     @Override
     public void postStop() {
         if (!fsm.state().equals(uninitialized)) {
-            logger.info("VoiceIntepreter: " + self().path()
+            if(logger.isInfoEnabled()) {
+                logger.info("VoiceIntepreter: " + self().path()
                     + "At the postStop() method. Will clean up Voice Interpreter. Keep calls: " + liveCallModification);
+            }
             if (fsm.state().equals(bridged) && outboundCall != null && !liveCallModification) {
-                logger.info("At postStop(), will clean up outbound call");
+                if(logger.isInfoEnabled()) {
+                    logger.info("At postStop(), will clean up outbound call");
+                }
                 outboundCall.tell(new Hangup(), null);
                 callManager.tell(new DestroyCall(outboundCall), null);
                 outboundCall = null;
             }
 
             if (call != null && !liveCallModification) {
-                logger.info("At postStop(), will clean up call");
+                if(logger.isInfoEnabled()) {
+                    logger.info("At postStop(), will clean up call");
+                }
                 callManager.tell(new DestroyCall(call), null);
                 call = null;
             }
@@ -2512,9 +2695,10 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
 
         @Override
         public void execute(Object message) throws Exception {
-            logger.info("Joining call from:" + callInfo.from() + " to: " + callInfo.to() + " with outboundCall from: "
+            if(logger.isInfoEnabled()) {
+                logger.info("Joining call from:" + callInfo.from() + " to: " + callInfo.to() + " with outboundCall from: "
                     + outboundCallInfo.from() + " to: " + outboundCallInfo.to());
-
+            }
             // Check for any Dial verbs with url attributes (call screening url)
             Tag child = dialChildrenWithAttributes.get(outboundCall);
             if (child != null && child.attribute("url") != null) {
@@ -2530,7 +2714,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                         return;
                     }
                 } catch (Exception e) {
-                    logger.info("Exception while trying to execute call screening: "+e);
+                    if(logger.isInfoEnabled()) {
+                        logger.info("Exception while trying to execute call screening: "+e);
+                    }
                     fsm.transition(message, hangingUp);
                     return;
                 }
